# seko-ai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  backlog.md  docker-entrypoint.sh  publish.sh  pyproject.toml  tasks.sh
.github/: copilot-instructions.md
migrations/: env.py
migrations/versions/: 4ea211529f1c_api_key_workspace_id.py  749781f6af9b_initial_schema.py  8325c715e6e2_workspace_litellm_key_alias.py  a1b2c3d4e5f6_service_status_tables.py  c2a97f628d57_ssh_keys_table.py
src/seko_ai/: __init__.py  __main__.py  app.py  auth.py  config.py  deps.py  harness.py  logging_config.py  management.py  metrics.py  models.py
src/seko_ai/db/: __init__.py
src/seko_ai/routers/: auth.py  backups.py  docs.py  health.py  keys.py  profile.py  selfhost.py  status.py  usage.py  workspaces.py
src/seko_ai/services/: backups.py  crypto.py  docker_backend.py  keys.py  kit.py  litellm_client.py  notifications.py  ssh_keys.py  status.py  usage.py  users.py  workspaces.py
src/seko_ai/static/: app.css
src/seko_ai/templates/: _backups_list.html  _error.html  _keys_panel.html  _selfhost_kit.html  backups.html  (+12 more)
tests/: conftest.py  fakes.py
tests/integration/: test_auth_flow.py  test_backups_routes.py  test_docs_routes.py  test_keys_routes.py  test_selfhost_routes.py  test_status_routes.py  test_usage_routes.py  test_workspaces_routes.py
tests/unit/: test_auth.py  test_backups_service.py  test_config.py  test_crypto.py  test_docker_backend.py  test_harness.py  test_keys_service.py  test_kit.py  test_litellm_client.py  test_management.py  test_smoke.py  test_ssh_keys.py  test_status.py  test_usage_and_metrics.py  test_workspaces_service.py
workspace-image/: Dockerfile  README.md  entrypoint.sh  publish.sh  sshd_config  test_entrypoint.sh
workspace-image/omp-agent/: config.yml  local-llm.ts
workspace-image/pi-agent/: local-llm.ts  settings.json
